--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,14 +12,14 @@
                </div>
            {% endif %}
            <div class="form-group">
-               <label for="username">Nom d'utilisateur</label>
+               <label for="username">{{ 'username'|trans }}</label>
                <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}">
            </div>
            <div class="form-group">
-               <label for="password">Mot de passe</label>
+               <label for="password">{{ 'password'|trans }}</label>
                <input type="password" class="form-control" id="password" name="_password">
            </div>
-           <button type="submit" class="btn btn-primary"> Se connecter</button>
+           <button type="submit" class="btn btn-primary"> {{ 'login'|trans }}</button>
        </form>
     </div>
 </div>
